# lang/ar/validation.php
@@ -180,6 +180,9 @@ return [
             'unique' => 'هذا الرقم القومى موجود بالفعل',
             'digits' => 'الرقم القومى يجب ان يكون 14 رقم',
         ],
+        'username' => [
+            'unique' => 'هذا المستخدم موجود بالفعل',
+        ],
     ],
 
     /*
